--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "url": "git@github.com:akoenig/gulp-spellcheck.git"
   },
   "keywords": [
-    "gulpplugin"
+    "gulpplugin",
+    "spell-checking"
   ],
   "dependencies": {
     "gulp-util": "^2.2.14",
