fix: add preinstall step for aspell + fixed #7

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
+    "preinstall": "echo 'This npm package requires installing aspell for development:' && sudo apt install aspell",
     "test": "gulp"
   },
   "repository": {
